[DTSSTCI-1446] Add check for timestamp to ensure correct order is sent